# fairy

./: .gitignore  CMakeLists.txt
Source/Runtime/: CMakeLists.txt  Engine.cpp  Engine.h
Source/Runtime/Core/: Object.h
Source/Runtime/Core/Common/: Object.cpp
Source/Runtime/Core/JobSystem/: JobSystem.cpp  JobSystem.h
Source/Runtime/Core/Math/: Math.hpp
Source/Runtime/Function/Render/: RenderGraph.cpp  RenderGraphNode.cpp  RenderGraphNode.h  RenderPass.cpp  RenderPass.h
Source/Runtime/Platform/Surface/: Surface.cpp  Surface.h
Source/Runtime/Platform/Window/: GraphicsContext.cpp  GraphicsContext.h  WebGPUWindow.cpp  WebGPUWindow.h  Window.cpp  Window.h
Source/Tools/: CMakeLists.txt
Source/Tools/Editor/: Editor.cpp
Source/Tools/Editor/View/: SceneViewWidget.cpp  SceneViewWidget.h  Widget.hpp
misc/code-style/: .clang-format  .xml
src/runtime/: CMakeLists.txt  engine.cpp  engine.h  runtime.h
src/runtime/core/common/: non_copyable.h  object.cpp
src/runtime/core/ecs/: component.cpp  component.h  registry.cpp  registry.h  system.cpp  system.h
src/runtime/extension/render_graph/: render_graph.cpp  render_graph.h  render_graph_node.cpp  render_graph_node.h  render_pass.cpp  render_pass.h  render_resource.cpp  render_resource.h
src/runtime/function/render/: render_graph.cpp  render_graph.h  (+8 more)
src/runtime/platform/: graphics_context.cpp  graphics_context.h  window.cpp  window.h
src/runtime/render/: module.h  system.cpp  system.h
src/runtime/window/: module.h  system.cpp  system.h
src/tools/: CMakeLists.txt
src/tools/editor/: editor.cpp
(+47 files in other folders)
